buildscript {
    dependencies {
        classpath files('jasypt-encrypt-plugin-1.3.3.jar')
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.2'
    id 'io.spring.dependency-management' version '1.1.2'
    id "io.github.ximtech.jasypt-encrypt-plugin" version "1.3.3"
    id 'checkstyle'
}

bootRun {
    systemProperties = [
            'spring.profiles.active': 'dev'
    ]
}

group = 'ru.ac'
version = '0.1.19-SNAPSHOT-TEST'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-test'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    implementation 'org.liquibase:liquibase-core:4.23.1'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.modelmapper:modelmapper:3.1.1'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
    implementation 'redis.clients:jedis'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'

    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.projectlombok:lombok:1.18.22'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'junit:junit:4.13.1'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.4'
    testImplementation "com.redis:testcontainers-redis:2.0.1"
    testImplementation 'org.testcontainers:postgresql:1.18.3'
    testImplementation 'org.instancio:instancio-junit:3.5.0'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
}

encryptProperties {
    password = System.getenv('JASYPT_ENCRYPTOR_PASSWORD')
}

decryptProperties {
    password = System.getenv('JASYPT_ENCRYPTOR_PASSWORD')
}

checkstyle {
    toolVersion = '10.12.5'
    configFile file("config/checkstyle/checkstyle.xml")
}

tasks.named('test') {
    useJUnitPlatform()
}
